--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,6 +11,8 @@
     <div id="content">
     </div>
 
+    <script src="http://localhost:8080/webpack-dev-server.js"></script>
+
   </body>
 
 </html>
