--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,13 +3,13 @@
 
   <head>
     <meta charset="utf-8">
-    <title>{%= o.htmlWebpackPlugin.options.title %}</title>
+    <title>React webpack babel example</title>
   </head>
 
   <body>
-
-    <div id="content">
+ <div id="content">
     </div>
+
 
   </body>
 
